# xtea-haskell

./: CHANGELOG.md  README.md  xtea.cabal
src/Crypto/Cipher/: Xtea.hs
test/: Main.hs
test/Test/: Golden.hs
test/Test/Crypto/Cipher/: Xtea.hs
