cabal-version:       3.4
name:                xtea
version:             0.1.0.0
synopsis:            XTEA (eXtended Tiny Encryption Algorithm).
description:
  Haskell implementation of the
  [XTEA (eXtended Tiny Encryption Algorithm)](https://en.wikipedia.org/wiki/XTEA)
  block cipher.
author:              Luke Nadur
maintainer:          Luke Nadur
license:             MIT
license-file:        LICENSE
category:            Cryptography
homepage:            https://github.com/intricate/xtea-haskell
bug-reports:         https://github.com/intricate/xtea-haskell/issues
build-type:          Simple
tested-with:         GHC == 9.6.3, GHC == 9.4.8, GHC == 8.10.1
extra-source-files:
  README.md
  test/golden/**/*.bin
extra-doc-files:     CHANGELOG.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:  DerivingStrategies
                       GeneralizedNewtypeDeriving
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages

  exposed-modules:     Crypto.Cipher.Xtea

  build-depends:       base >= 4.14 && < 5
                     , binary >= 0.8.7 && < 0.9
                     , bytestring >= 0.11 && < 0.12

test-suite xtea-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  default-extensions:  DerivingStrategies
                       GeneralizedNewtypeDeriving
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wredundant-constraints
                       -Wincomplete-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wunused-imports
                       -Wunused-packages

  other-modules:       Test.Crypto.Cipher.Xtea
                       Test.Golden

  build-depends:        base >= 4.14 && < 5
                      , bytestring
                      , hedgehog
                      , xtea

source-repository head
  type:     git
  location: git://github.com/intricate/xtea-haskell.git
